--- a/NueCCsel/NueCCsel.tex
+++ b/NueCCsel/NueCCsel.tex
@@ -1,5 +1,7 @@
 \label{sec:nueselection:inclusive}
 
+The aim of the inclusive charged-current electron neutrino selection is to select electron neutrinos independently of their final state and energy. The selection performance is approximately 20\%, leading to 250-300 electron neutrino's in the Run 1-4 data-set. The purity without CRT is $\pprox$
+
 \subsubsection{Pre-selection}
 
 \begin{figure}
